// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should display the error received 1`] = `
<body>
  <div>
    <div
      class="css-cs36e2-propertySection"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        ButtonLabel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should display the error received 2`] = `
<body>
  <div>
    <div
      class="css-cs36e2-propertySection"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        ButtonLabel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render a readOnly button 1`] = `
<div>
  <div
    class="css-cs36e2-propertySection"
  >
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
      >
        Label
      </h6>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
      data-testid="ButtonLabel"
      disabled=""
      tabindex="-1"
      type="button"
    >
      ButtonLabel
    </button>
  </div>
</div>
`;

exports[`should render a readOnly button from widget properties 1`] = `
<body>
  <div>
    <div
      class="css-cs36e2-propertySection"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
        data-testid="ButtonLabel"
        disabled=""
        tabindex="-1"
        type="button"
      >
        ButtonLabel
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button 1`] = `
<div>
  <div
    class="css-cs36e2-propertySection"
  >
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
      >
        Label
      </h6>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
      data-testid="ButtonLabel"
      tabindex="0"
      type="button"
    >
      ButtonLabel
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`should render the button with empty style 1`] = `
<body>
  <div>
    <div
      class="css-cs36e2-propertySection"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        ButtonLabel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button with help hint 1`] = `
<body>
  <div>
     
    <div
      class="css-cs36e2-propertySection"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Label
        </h6>
        <div
          class="css-vrp56w-decorators"
        >
          <svg
            aria-hidden="true"
            aria-label=""
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeMedium css-kw0y8f-MuiSvgIcon-root"
            data-mui-internal-clone-element="true"
            data-testid="HelpOutlineOutlinedIcon"
            focusable="false"
            style="margin-left: 8px; font-size: 16px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
            />
          </svg>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        ButtonLabel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button with style 1`] = `
<body>
  <div>
    <div
      class="css-cs36e2-propertySection"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root css-1h1gv87-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root css-1h1gv87-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        ButtonLabel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should render the button without style 1`] = `
<body>
  <div>
    <div
      class="css-cs36e2-propertySection"
    >
      <div
        class="css-1ccipwk-propertySectionLabel"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
        >
          Label
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
        data-testid="ButtonLabel"
        tabindex="0"
        type="button"
      >
        ButtonLabel
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`should send mutation when clicked 1`] = `
<div>
  <div
    class="css-cs36e2-propertySection"
  >
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
      >
        Label
      </h6>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
      data-testid="ButtonLabel"
      tabindex="0"
      type="button"
    >
      ButtonLabel
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`should send mutation when clicked 2`] = `
<div>
  <div
    class="css-cs36e2-propertySection"
  >
    <div
      class="css-1ccipwk-propertySectionLabel"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-t33jlf-typography css-ati914-MuiTypography-root"
      >
        Label
      </h6>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root css-35i3u7-style MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-sghohy-MuiButtonBase-root-MuiButton-root"
      data-testid="ButtonLabel"
      tabindex="0"
      type="button"
    >
      ButtonLabel
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
